src/main/java/org/example/breakoutdrop/Errors/ClientHTTP/NotFound404.java
package org.example.breakoutdrop.Errors.ClientHTTP;

public class NotFound404 extends RuntimeException {
    public NotFound404(String message) {
        super(message);
    }
}
